--- a/public/views/home/Home.html
+++ b/public/views/home/Home.html
@@ -1,26 +1,35 @@
 ﻿<div class="container">
 
     <div class="row">
+        <h1 class="title">Image Visualizer</h1>
+    </div>
+
+    <div class="row">
         <div class="col-lg-12">
             <div class="input-group">
                 <span class="input-group-btn">
-                    <button class="btn btn-secondary" ng-click="submit()" type="button">Go!</button>
+                    <button class="btn btn-secondary" ng-click="submit()" type="button">Submit</button>
                 </span>
-                <input type="text" ng-model="city" name="text" class="form-control" placeholder="Enter City...">
+                <input type="text" ng-model="city" name="text" class="form-control" placeholder="Enter City Name...">
             </div>
         </div>
     </div>
 
-    <div class="row cityImages" style="margin-top:20px; margin-bottom:20px">
+    <div class="row cityImages">
         <div class="col-lg-6">
-            <uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
-                <uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
-                    <img ng-src="{{slide.image.url}}" style="max-height:400px; min-width:100%">
-                    <div class="carousel-caption">
-                        <p>{{slide.image.place}}</p>
-                    </div>
-                </uib-slide>
-            </uib-carousel>
+            <div class="displayImages">
+                <carousel interval="myInterval" no-wrap="noWrapSlides">
+                    <slide ng-repeat="slide in slides" active="slide.active">
+                        <img ng-src="{{slide.image.url}}">
+                        <div class="carousel-caption">
+                            <p>{{slide.image.place}}</p>
+                        </div>
+                    </slide>
+                </carousel>
+            </div>
+            <div class="dash-pagination">
+                <pagination total-items="totalItems" ng-change=pageChanged() ng-model="currentPage" max-size="maxSize" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" boundary-links="true"></pagination>
+            </div>
         </div>
 
         <div class="col-lg-6">
@@ -58,7 +67,7 @@
                                             {{imageHeight.label}}
                                         </select>
                                     </div>
-                                    <button type="submit" class="btn btn-primary" ng-click="query()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                                    <button type="submit" class="btn btn-primary" ng-click="query(1)"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
                                 </form>
                             </div>
                         </div>
