--- a/public/views/home/Home.html
+++ b/public/views/home/Home.html
@@ -4,7 +4,7 @@
         <h1 class="title">Image Visualizer</h1>
     </div>
 
-    <!--<div class="row">
+    <div class="row">
         <div class="col-lg-12">
             <div class="input-group">
                 <span class="input-group-btn">
@@ -13,7 +13,7 @@
                 <input type="text" ng-model="city" name="text" class="form-control" placeholder="Enter City Name...">
             </div>
         </div>
-    </div>-->
+    </div>
 
     <div class="row cityImages">
         <div class="col-lg-6">
